ns-dev-apps/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apps-network-policy

spec:
  podSelector:
    matchLabels:
      ns.trap.jp/managed: "true"
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
    - to:
        - ipBlock:
            cidr: ::/0
            except:
              - fc00::/7
              - fe80::/10
              - 2001:cafe:42:0::/56 # Pod CIDR
              - 2001:cafe:42:1::/112 # Service CIDR
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ns-dev-system
          podSelector:
            matchLabels:
              app: mariadb
      ports:
        - protocol: TCP
          port: mariadb
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ns-dev-system
          podSelector:
            matchLabels:
              app: mongo
      ports:
        - protocol: TCP
          port: mongo
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
            podSelector:
              matchLabels:
                app.kubernetes.io/name: traefik
